# internal/dto/category.go
@@ -1,0 +1,6 @@
+package dto
+
+type CategoryResponse struct {
+	ID   string `json:"id"`
+	Name string `json:"name"`
+} 
